# paynomous

./: .env.example  .env.production.example  .gitignore  .mcp.json  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  app.service.ts  main.ts
backend/src/agents/: agent-decision.service.ts  agents.controller.ts  agents.module.ts  agents.service.spec.ts  agents.service.ts
backend/src/alerts/: CLAUDE.md  alerts.controller.ts  alerts.module.ts  alerts.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt-auth.guard.ts  jwt.strategy.ts
backend/src/deals/: deals.controller.ts  deals.service.ts
backend/test/: agents.e2e-spec.ts  auth.e2e-spec.ts  jest-e2e.config.js  rooms.e2e-spec.ts  setup.ts  teardown.ts
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  TROUBLESHOOTING.md  WEBSOCKET_EVENTS.md
docs/monitoring/: SETUP.md  alert_rules.yml  grafana-dashboard.json  prometheus.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: Header.tsx  SpawnAgentModal.tsx
frontend/lib/: utils.ts
rust-services/: Cargo.toml  Dockerfile
rust-services/src/: ark_client.rs  handlers.rs  main.rs  models.rs
scripts/: migrate.sh
scripts/ralph/: .last-branch  CLAUDE.md  prd.json  progress.txt  ralph.sh
specs/: Agentrooms-PRD.md
(+59 files in other folders)
