[package]
name = "agentic-payments"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
